# testnet-canary

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  celestia_rollup_config.toml  constants.toml  mock_rollup_config.toml  rust-toolchain.toml  sov-rollup-starter.sh
crates/: chain_hash.autogenerated.rs
crates/benchmarks/sampling/: Cargo.toml  diesel.toml
crates/benchmarks/sampling/migrations/2024-10-15-204215_create_metric_table/: down.sql  up.sql
crates/benchmarks/sampling/src/: helpers.rs  latency.rs  lib.rs  schema.rs
crates/benchmarks/sampling/src/db/: models.rs  samples.rs
crates/benchmarks/spammer/: Cargo.toml  diesel.toml  test.db
crates/benchmarks/spammer/migrations/2024-11-10-090036_spam_results/: down.sql  up.sql
crates/benchmarks/spammer/src/: helpers.rs  lib.rs  schema.rs
crates/benchmarks/spammer/src/db/: mod.rs  models.rs  spam_res.rs  utils.rs
crates/benchmarks/state-metrics/: Cargo.toml  diesel.toml
crates/benchmarks/state-metrics/migrations/2024-10-21-013017_create_state_metrics/: down.sql  up.sql
crates/benchmarks/state-metrics/src/: lib.rs  schema.rs
crates/benchmarks/state-metrics/src/db/: models.rs  samples.rs
crates/capsule/: Cargo.toml
crates/capsule/src/: event.rs  lib.rs  rpc.rs
crates/capsule/src/call/: mod.rs
crates/capsule/src/state/: mod.rs  pubkey.rs  wallet.rs
crates/capsule/src/utils/: helpers.rs
crates/capsule/tests/: capsule_tests.rs
crates/dex/: Cargo.toml
crates/dex/src/: call.rs  event.rs  genesis.rs  lib.rs  rpc.rs  utils.rs
crates/dex/src/state/: fee_model.rs  lz4.rs  mod.rs  print_trade.rs
crates/oracle/aggregator/: Cargo.toml
crates/oracle/aggregator/src/: main.rs
crates/oracle/lut/: Cargo.toml
crates/oracle/lut/benches/: ring_buffers.rs
crates/oracle/lut/src/: call.rs  event.rs  fixed_ring_buffer.rs  genesis.rs  lib.rs  rpc.rs  state.rs
crates/oracle/lut/tests/: lut_test.rs
crates/oracle/node/: Cargo.toml  build.rs
crates/oracle/node/src/: main.rs
crates/oracle/registry/: Cargo.toml
crates/oracle/registry/src/: call.rs  event.rs  lib.rs  rpc.rs  state.rs
crates/oracle/registry/tests/: registry_tests.rs
crates/provers/sp1/guest-celestia/: Cargo.toml
crates/provers/sp1/guest-mock/: Cargo.toml
crates/shared/: Cargo.toml  diesel.toml
crates/shared/benches/: shared_bench.rs
crates/shared/migrations/2024-09-01-074222_create_logs/: down.sql  up.sql
crates/shared/migrations/2024-10-08-145144_create_orpheus_tick/: down.sql  up.sql
crates/shared/migrations/2024-10-29-091723_orpheus_tick_price_tick/: down.sql  up.sql
crates/shared/migrations/2024-10-29-094848_price_tick_confidence_int/: down.sql  up.sql
crates/shared/src/: addresses.rs  error.rs  fast_int.rs  fractional.rs  is_initialized.rs  lib.rs  other_ids.rs  safe_iter.rs  safe_math.rs  schema.rs  utils.rs
crates/shared/src/aaob/: mod.rs  orderbook_id.rs  tree.rs
crates/shared/src/crypto/: aptos.rs  ed25519.rs  ethereum.rs  mod.rs  solana.rs
crates/shared/src/crypto/sui/: ed25519.rs
crates/shared/src/db/: logs.rs  mod.rs  models.rs  price_ticks.rs  utils.rs
crates/shared/src/dex/: address.rs  bitpair.rs  callback_info.rs  constants.rs  enums.rs  error.rs  mod.rs  mpg.rs  open_orders.rs  price_ewma.rs  trg.rs  two_iterators.rs
crates/shared/src/dex/products/: combo.rs  mod.rs  outright.rs  product.rs  product_metadata.rs  product_status.rs  products_arrays.rs
crates/shared/src/ids/: derivative.rs  mod.rs  mpg.rs  product.rs
crates/shared/src/oracle/: constants.rs  mod.rs
crates/shared/src/risk/: constants.rs  covariance_metadata.rs  error.rs  health_status.rs  mod.rs  risk_output.rs  variance_cache.rs
crates/shared/src/time/: mod.rs
crates/shockwave/: Cargo.toml  README.md
crates/shockwave/core/: Cargo.toml
crates/shockwave/crds/: Cargo.toml
crates/shockwave/fec/: Cargo.toml
crates/shockwave/fec/src/: lib.rs
crates/shockwave/networking/: Cargo.toml
crates/shockwave/networking/benches/: networking_bench.rs
crates/shockwave/networking/src/: lib.rs  packet.rs  tree_update.rs  udp.rs
crates/shockwave/ripple/: Cargo.toml
crates/shockwave/ripple/src/: epidemic_tree.rs  lib.rs  propagation.rs
crates/shockwave/shredding/: Cargo.toml
crates/shockwave/src/: batch.rs  lib.rs
crates/spicenet-risk/: Cargo.toml
crates/spicenet-risk/src/: bitpair.rs  event.rs  genesis.rs  lib.rs  mod.rs  rpc.rs  two_iterators.rs  utils.rs
crates/spicenet-risk/src/call/: collect_mark_prices_garbage.rs  delete_mark_prices.rs  initialize_covariance_matrix.rs  initialize_mark_prices.rs  mod.rs  remove_market_product_index_from_variance_cache.rs  update_covariance_matrix.rs  update_mark_prices.rs
crates/spicenet-risk/src/call/internal/: delete_variance_cache.rs  initialize_variance_cache.rs  mod.rs  validate_account_health.rs  validate_account_liquidation.rs
crates/spicenet-risk/src/deprecated/: mod.rs  mpg_minimal.rs  price_ewma.rs  product_status.rs  products.rs
crates/spicenet-risk/src/deprecated/correlation_matrix/: README.md  correlation_index_lookup_table.rs  mod.rs
crates/spicenet-risk/src/deprecated/covariance_matrix/: README.md  mod.rs
crates/spicenet-risk/src/deprecated/covariance_metadata/: README.md  mod.rs
crates/spicenet-risk/src/deprecated/dex/: enums.rs  errors.rs  mod.rs  mpg.rs  open_orders.rs  price_ewma.rs  trg.rs
crates/spicenet-risk/src/deprecated/mark_prices/: mod.rs
crates/spicenet-risk/src/deprecated/oracle_type/: mod.rs
crates/spicenet-risk/src/deprecated/risk/: README.md  mod.rs  risk.rs
crates/spicenet-risk/src/deprecated/risk_output/: mod.rs
crates/spicenet-risk/src/deprecated/risk_profile/: mod.rs
crates/spicenet-risk/src/helpers/: mod.rs  product_index_mappers.rs  risk_cached.rs
crates/spicenet-risk/src/state/: correlation_index_lookup_table.rs  correlation_lookup_table.rs  correlation_matrix.rs  covariance_matrix.rs  mark_prices.rs  mod.rs  risk_profile.rs
crates/spicenet-risk/tests/: risk_tests.rs
crates/time/: Cargo.toml
crates/time/src/: call.rs  constants.rs  event.rs  hooks.rs  lib.rs  rpc.rs
crates/time/tests/: time_tests.rs
(+94 files in other folders)
