[package]
name = "spicenet-dex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# sovereign sdk
#sov-modules-api = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git" }
#sov-state = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git" }
#sov-accounts = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git" }
#sov-modules-macros = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git" }
#sov-test-utils = { git = "ssh://git@github.com/Sovereign-Labs/sovereign-sdk-wip.git" }
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
sov-accounts = { workspace = true }
sov-modules-macros = { workspace = true }
sov-test-utils = { workspace = true }
ahash = "0.8.11"
bytemuck = { version = "1.18.0", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
thiserror = { workspace = true }
bech32 = "0.11.0"
num-traits = "0.2"
num-derive = "0.3"
spicenet-shared = { path = "../shared" }
spicenet-risk = { path = "../spicenet-risk" }
# spicenet-aaob = { path = "../aaob-module" }

schemars = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = [
    "macros",
    "client-core",
    "server",
], optional = true }
time = "0.3.36"


[dev-dependencies]
hexdump = "0.1.0"
spicenet-dex = { version = "*", features = ["native"], path = "." }
sov-rollup-interface = { workspace = true }


[features]
default = []
native = [
    "jsonrpsee",
    "schemars",
    "spicenet-dex/native",
    "sov-rollup-interface/native",
    "sov-state/native",
]
test = ["native"]

[lints]
workspace = true
