[package]
name = "spicenet-risk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# sovereign sdk
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
sov-accounts = { workspace = true }
sov-modules-macros = { workspace = true }

# aaob = { path = "../aaob" }
spicenet-aaob = { path = "../aaob-module" }
spicenet-time = { path = "../time" }
spicenet-shared = { path = "../shared" }
lut = { path = "../oracle/lut" }
schemars = { workspace = true, features = ["derive"] }
# spicenet-dex = { path = "../dex" }
sokoban = { path = "../sokoban" }
bincode = "1.3.1"
borsh = { workspace = true }
bytemuck = "1.18.0"
serde = { workspace = true }
thiserror = { workspace = true }
serde-big-array = "0.5.1"
tokio = { workspace = true }
num-derive = "0.3"
num-traits = "0.2.14"
anyhow = { workspace = true }
jsonrpsee = { workspace = true, features = [
    "macros",
    "client-core",
    "server",
] } # Need it for rpc.rs

# time crate
time = "0.3.36"

[features]
default = []
native = [
    "spicenet-aaob/native",
    "spicenet-shared/native",
]

[lints]
workspace = true
