[package]
name = "spicenet-aggregator"
version = "0.1.0"
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "aggregator"
path = "src/main.rs"

[dependencies]
futures = "0.3.30"
prost = "0.12.6"
tokio = { workspace = true, features = ["full"] }
tonic = "0.11.0"
spicenet-shared = { path = "../../shared" }

[build-dependencies]
tonic-build = "0.11.0"
