[package]
name = "lut"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true


[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
serde = { workspace = true }
sov-test-utils = { workspace = true }
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
clap = { workspace = true, optional = true }
schemars = { version = "0.8.21", optional = true }
serde_json = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["macros", "client-core", "server"] }
spicenet-time = { path = "../../time" }
spicenet-shared = { path = "../../shared", features = ["offchain"] }
serde_arrays = { workspace = true, optional = true }

[dev-dependencies]
sov-rollup-interface = { workspace = true }
tempfile = { workspace = true }
lut = { path = ".", features = ["native"] }
criterion = "0.5.1"


[features]
default = []
native = [
    "clap",
    "schemars",
    "serde_json",
    "serde_arrays",
    "sov-modules-api/native",
    "sov-rollup-interface/native",
    "sov-state/native",
    "spicenet-shared/native",
]
test = ["native"]

[[bench]]
name = "ring_buffers"
harness = false
