[package]
name = "spicenet-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
futures = "0.3.30"
prost = "0.12.6"
tokio = { workspace = true, features = ["full"] }
tonic = "0.11.0"
rand = "0.8.5"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1.0"
reqwest = "0.12.5"
clap = "4.5.17"
base64 = "0.22.1"
http = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11.0"
