[package]
name = "oracle-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
sov-accounts = { workspace = true }
sov-modules-macros = { workspace = true }
sov-bank = { workspace = true }
spicenet-time = { path = "../../time" }
schemars = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = [
    "macros",
    "client-core",
    "server",
], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
thiserror = { workspace = true }

[dev-dependencies]
oracle-registry = { version = "*", features = ["native"], path = "." }
sov-rollup-interface = { workspace = true }
sov-test-utils = { workspace = true }

[features]
default = []
native = [
    "jsonrpsee",
    "schemars",
    "oracle-registry/native",
    "sov-modules-api/native",
    "sov-rollup-interface/native",
    "sov-state/native",
]

[lints]
workspace = true
