[package]
name = "core"
version = "0.1.0"
edition = "2021"
core.workspace = true
networking.workspace = true
propagation.workspace = true
crds.workspace = true
fec.workspace = true
shredding.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
